test/errors/error41.base
Array declarations should provide dimensions in the form array(type, size)
fun main() {
  val kk : array(real);
                ^
